# global-sentinel-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt  server.json
.github/: CODEOWNERS  branch_protection_rules.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: data-sources.md
src/global_sentinel_mcp/: __init__.py  _cache.py  _http.py  server.py
src/global_sentinel_mcp/aviation/: __init__.py  client.py  converter.py  models.py
src/global_sentinel_mcp/infrastructure/: __init__.py  client.py  models.py
src/global_sentinel_mcp/news_events/: __init__.py  client.py  models.py  parser.py
src/global_sentinel_mcp/prediction_markets/: __init__.py  client.py  models.py
tests/: conftest.py  test_aviation.py  test_infrastructure.py  test_news_events.py  test_prediction_markets.py
